commit after creating branch

--- a/default.html
+++ b/default.html
@@ -7,5 +7,6 @@
 <body>
     This is a test document for GIT. 
     This is the second line added after commit. 
+    This was added after checking out a branch. 
 </body>
 </html>
